company users and roles service for front end and company member information endpoint
